--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 id="myForm">
                     <input type="text" placeholder="Name" name="name">
                     <input type="text" placeholder="Surname" name="surname">
-                    <input type="text" placeholder="@email" name="email">
+                    <input type="email" placeholder="@email" name="email">
                     <input type="number" placeholder="phone number" name="phoneNum">
                     <input type="number" placeholder="Stream" name="streamNum">
                     <!-- <input type="submit" class="add" value="Submit"> -->
