--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
                     <input type="text" placeholder="Surname" name="surname">
                     <input type="email" placeholder="@email" name="email">
                     <input type="number" placeholder="phone number" name="phoneNum">
-                    <input type="number" placeholder="Stream" name="streamNum">
+                    <input type="number" placeholder="Money" name="money">
+                    <!-- <input type="number" placeholder="Stream" name="streamNum"> -->
                     <!-- <input type="submit" class="add" value="Submit"> -->
                     <button type="submit" class="add">Submit</button>
                 </form>
@@ -31,7 +32,8 @@
                             <th>Surname</th>
                             <th>@email</th>
                             <th>Phone number</th>
-                            <th>Stream</th>
+                            <th>Money</th>
+                            <!-- <th>Stream</th> -->
                             <th>Delete</th>
                             <th>Edit</th>
                         </tr>
